# EEGDash

./: .buildinfo  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_MANAGEMENT_PLAN.md  README.md  codecov.yml  codemeta.json  coverage.json  dataset_summary.html  dataset_summary.md  developer_notes.html  developer_notes.md  genindex.html  index.html  index.md  llms.txt  objects.inv  process-fix-split-fif-continuation.md  py-modindex.html  pyproject.toml  quickstart.html  quickstart.md  references.html  references.md  search.html  searchindex.js  sg_api_usage.html  sg_api_usage.md  sg_execution_times.html  sg_execution_times.md  simple_download.py  sitemap.xml  tutorials.mk  user_guide.html  user_guide.md
api/: api.html  (+7 more)
scripts/ingestions/: .gitignore  2_clone.py  2_clone_v2.py  2_filter_new_datasets.py  3_clone_datasets_detailed.py  3_digest.py  4_digest_single_dataset.py  4_inject.py  4_validate_output.py  5_digest_datasets_minimal.py  5_inject.py  6_batch_digest_all_datasets.py  7_inject_digested_data.py  CONTEXT.md  README.md  REFACTORING_PLAN.md  __init__.py  _bids.py  _bids_digest.py  _bids_path.py  _clone_config.py  _constants.py  _coverage.py  _dataset_metadata.py  _digest_config.py  _digest_runner.py  _edf_header.py  _file_utils.py  _fingerprint.py  _format_parser_registry.py  _github.py  _http.py  _inject_config.py  _inject_plan.py  _keywords.py  _manifest_digest.py  _mef3_parser.py  _metadata_cascade.py  _montage.py  _nemar.py  (+25 more)
scripts/ingestions/1_fetch_sources/: 1_fetch_openneuro_datasets.py  README_DATARN.md  datarn.py  eegmanylabs.py  fetch_neurips2025.py  figshare.py  figshare_combine.py  local_bids.py  nemar.py  openneuro.py  osf.py  scidb.py  zenodo.py
scripts/ingestions/ROBUSTNESS/: 01-AUDIT.md  02-STYLE_GUIDE.md  03-CONTRIBUTING.md  04-ROADMAP.md  05-EVALUATION.md  06-PARALLELIZATION.md  07-DETAILS.md  08-NEMAR-API-SIMPLIFICATION.md  AGENT_PROMPT.md  BIDS-GAP-AUDIT.md  CONFIG-PATTERN.md  INTEGRATION-TESTING.md  NEXT-SPRINT-PLAN.md  OPS-CHECKLIST.md  PERFORMANCE.md  PIPELINE-CONTRACT.md  PROGRESS-10.md  PROGRESS-11.md  PROGRESS-12.md  PROGRESS-13.md  PROGRESS-14.md  PROGRESS-15.md  PROGRESS-16.md  PROGRESS-17.md  PROGRESS-2.md  PROGRESS-3.md  PROGRESS-4.md  PROGRESS-5.md  PROGRESS-6.md  PROGRESS-7.md  PROGRESS-8.md  PROGRESS-9.md  PROGRESS.md  README.md  ROADMAP-C1.md  ROADMAP-C2.md  ROADMAP.md  SPRINT-2026-05-22-ACCEPTANCE.md  SPRINT-2026-05-22-PERF.md  SPRINT-2026-05-22-PLAN.md  (+7 more)
scripts/ingestions/ROBUSTNESS/ADRs/: 0001-secondary-source-deferral.md  0002-pipeline-orchestration-deferred.md  0003-separate-ingestions-repository.md
scripts/ingestions/dev/: audit_helper_usage.py  audit_local_imports.py  audit_pr_functions.py
scripts/ingestions/docs/adr/: 0001-evolutionary-typed-pipeline.md  0002-keep-flat-ingestions-layout.md
scripts/ingestions/profiles/: .gitignore  E2E-FULL-SCALE-PROFILE.md
scripts/ingestions/scripts/: find_leaked_creds.sh
scripts/ingestions/tests/: conftest.py  test_bids_helpers.py  test_bids_sidecar_enrichment.py  test_clone_config.py  test_clone_error_handling.py  test_digest_extraction_helpers.py  test_digest_extractions.py  test_digest_helpers.py  test_digest_snapshot.py  test_digest_telemetry.py  test_file_utils_helpers.py  test_find_leaked_creds.py  test_format_parser_registry.py  test_github_helpers.py  test_github_pygithub_fastpath.py  test_github_rest_fallback.py  test_http.py  test_http_variants.py  test_inject_api_calls.py  test_inject_config.py  test_inject_helpers.py  test_inject_integration_live.py  test_inject_integration_stress.py  test_manifest_walk_perf.py  test_mef3_parser.py  test_mef3_real_fixture.py  test_metadata_cascade.py  test_metadata_provenance.py  test_montage_annex_key_shortcut.py  test_montage_cache.py  test_montage_helpers.py  test_parser_utils.py  test_parser_utils_network.py  test_parsers_direct_extended.py  test_parsers_property.py  test_path_traversal.py  test_perf.py  test_pipeline_e2e.py  test_pipeline_e2e_mef3.py  test_pipeline_invariants.py  (+18 more)
scripts/ingestions/tests/_helpers/: __init__.py  builders.py  fake_workers.py  watchdog_main_probe.py
scripts/ingestions/tests/acceptance/: conftest.py  test_api_contract.py  test_idempotency.py  test_schema_acceptance.py
scripts/ingestions/tests/digest/: test_bids_digest.py  test_bids_sidecar.py  test_digest_runner.py  test_extraction_helpers.py  test_extractions.py  test_helpers.py  test_manifest_digest.py  test_record_enumerator.py  test_snapshot.py  test_source_adapter.py  test_source_listing.py  test_telemetry.py
scripts/ingestions/tests/fixtures/eeg/: LICENSE-ATTRIBUTION.md  sub-001_ses-01_task-meditation_eeg.bdf  (+3 more)
scripts/ingestions/tests/github/: test_helpers.py  test_pygithub_fastpath.py  test_rest_fallback.py
scripts/ingestions/tests/inject/: test_api_calls.py  test_helpers.py  test_inject_plan_golden.py  test_integration_live.py  test_integration_stress.py
scripts/ingestions/tests/parsers/: test_cheap_paths.py  test_edf_header.py  test_extended.py  test_format_registry.py  test_header_only.py  test_mef3.py  test_mef3_nsamples.py  test_mef3_remote.py  test_property.py  test_set.py  test_set_fdt.py  test_snirf.py  test_snirf_remote.py  test_vhdr.py
scripts/ingestions/tests/perf/: test_cheap_resolver_perf.py  test_perf.py
scripts/ingestions/tests/pipeline/: test_clone_error_handling.py  test_e2e.py  test_e2e_mef3.py  test_invariants.py  test_schema_preflight.py
scripts/ingestions/tests/unit/: test_bids_paths.py  test_cascade_size_remote_steps.py  test_coverage.py  test_digest_njobs.py  test_file_utils.py  test_find_leaked_creds.py  test_fingerprint.py  test_http.py  test_metadata_cascade.py  test_metadata_provenance.py  test_montage.py  test_nemar_records.py  test_parser_utils.py  test_parser_utils_network.py  test_path_traversal.py  test_rate_limited.py  test_remote_header.py  test_resolver_arithmetic.py  test_serialize.py  test_sizing.py  test_stage_configs.py  test_validate.py
scripts/ingestions/tests/validation/: test_mne_equivalence.py  test_remote_header_live.py
(+6281 files in other folders)
