[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "eegdash"
authors = [
  { name = "Bruno Aristimunha",   email = "b.aristimunha@gmail.com" },
  { name = "Aviv Dotan",          email = "avivdot@bgu.post.ac.il" },
  { name = "Pierre Guetschel",    email = "pierre.guetschel@donders.ru.nl" },
  { name = "Dung Truong",         email = "dt.young112@gmail.com" },
  { name = "Kuntal Kokate" },
  { name = "Aman Jaiswal",        email = "aman.jaiswal.1503@gmail.com" },
  { name = "Amitrava Majumdar" },
  { name = "Seyed Yahya Shirazi" },
  { name = "Oren Shriki",         email = "shrikio@bgu.ac.il" },
  { name = "Arnaud Delorme",      email = "adelorme@ucsd.edu" },
]
description     = "EEG-DaSh: an open data, tool, and compute resource — a Python library and catalog for 700+ BIDS-first EEG, MEG, fNIRS, EMG, and iEEG datasets, ML-ready via PyTorch"
readme          = "README.md"
license         = "BSD-3-Clause"
requires-python = ">=3.11"
keywords        = [
    "eeg",
    "electroencephalography",
    "brain-computer-interface",
    "bci",
    "neuroscience",
    "machine-learning",
    "deep-learning",
    "bids",
    "mne",
    "signal-processing",
    "feature-extraction",
    "dataset",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "braindecode[hub]>=1.4.0",
  "eeglabio",
  "mne>=1.11.0",
  "mne_bids>=0.18.0",
  "pandas",
  "pydantic",
  "pymatreader",
  "requests>=2.25.0",
  "rich",
  "s3fs",
  "tqdm",
  "eegdash[features]",
]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",  # Intel Mac
  "sys_platform == 'darwin' and platform_machine == 'arm64'",   # Apple Silicon Mac (M1/M2/M3)
  "sys_platform == 'linux' and platform_machine == 'x86_64'",   # Linux 64-bit
  "sys_platform == 'win32' and platform_machine == 'AMD64'"     # Windows 64-bit
]

[project.urls]
Homepage      = "https://eegdash.org"
Documentation = "https://eegdash.org"
Repository    = "https://github.com/eegdash/EEGDash"
Source        = "https://github.com/eegdash/EEGDash"
Issues        = "https://github.com/eegdash/EEGDash/issues"
"Bug Tracker" = "https://github.com/eegdash/EEGDash/issues"
Changelog     = "https://github.com/eegdash/EEGDash/releases"
Discussions   = "https://github.com/eegdash/EEGDash/discussions"
Chat          = "https://discord.gg/8jd7nVKwsc"


[project.optional-dependencies]
features = [
  "numba<0.61; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "numba;      sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "safetensors",
]
tests = [
    'pytest',
    'pytest-cov',
    'pytest-benchmark',
    'plotly',
    'moabb',
]
dev = [
  "pre-commit",
]

# MOABB integration is opt-in. Users who want the friendly
# ``eegdash.splits.get_splitter`` MOABB-backed splitters (CrossSubject,
# CrossSession, WithinSession, etc.) should install ``eegdash[moabb]``;
# otherwise the package falls back to the bundled sklearn implementation.
moabb = [
  "moabb",
]

docs = [
  "sphinx",
  "sphinx_design",
  "sphinx_gallery",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-sitemap",
  "sphinxext-opengraph",
  "sphinx-markdown-builder",
  "numpydoc",
  "lightgbm",
  "plotly",
  "seaborn",
  "moabb",
  "neuralfetch",
  "neuralset",
]

digestion = [
  "pybids",
  "gql[requests]",
  "requests_toolbelt",
  "beautifulsoup4",
  "python-dotenv",
  "selenium",
  "httpx",
  "tenacity",
  "hishel",
  "pydantic>=2",
  "PyGithub>=2",
]

all = [
  "eegdash[docs]",
  "eegdash[dev]",
  "eegdash[tests]",
  "eegdash[digestion]",
  "eegdash[moabb]",
]

[tool.setuptools]
py-modules = []
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "eegdash.__version__"}

[tool.setuptools.packages.find]
where      = ["."]
include    = ["eegdash*"]
exclude    = []
namespaces = false

[tool.setuptools.package-data]
"eegdash" = ["dataset_summary.csv"]
"eegdash.dataset" = ["dataset_summary.csv"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore-init-module-imports = true
select = ["E", "W", "F", "D", "I", "NPY201"]
ignore = ["E402", "E501", "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D205", "D400", "D415", "D417", "F403", "D401", "E741", "E722", "D419"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["eegdash", "braindecode"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks (run with '--benchmark-enable')",
    "network: marks tests that require network/S3 access (deselect with '-m \"not network\"')",
]
addopts = "-m 'not slow and not benchmark and not network' -ra --durations=10"
